# TraceBox

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
apps/cli/: tracebox.py
docs/: 1-codebase-analysis.md  2-implementation-plan.md  3-product-spec.md  4-architecture.md  5-improvement-plan.md  6-v1.0-plan.md  7-audit-and-v1.0-plan.md  api-reference.md  ripplegraph-integration.md
integrations/: README.md
integrations/claude-code/: install.sh
integrations/codex-cli/: install.sh
integrations/cursor/: install.sh
integrations/hermes-agent/: install.sh
tests/e2e/: test_all.py  test_rollback_matrix.py
tests/fixtures/simple-ts-project/: package.json  test_change.txt
tests/fixtures/simple-ts-project/src/: api.ts  auth.ts  middleware.ts  utils.ts
tests/fixtures/simple-ts-project/tests/: api.test.ts  auth.test.ts
tests/unit/: test_ledger.py  test_policy.py  test_recorder.py  test_report.py
